--- a/.github/workflows/rivanfadlani.yml
+++ b/.github/workflows/rivanfadlani.yml
@@ -1,25 +1,16 @@
-name: Waka README
+name: Work Stats Readme
 
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12 am UTC daily
-    - cron: '0 0 * * *'
+    # Runs every 2 hours
+    - cron: "0 */2 * * *"
 
 jobs:
   update-readme:
-    name: Update Readme with WakaTime Stats
+    name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      # PENTING: Gunakan indentasi yang benar di sini (2 spasi di depan uses)
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
-          # PENTING: GH_TOKEN harus ada di sini dan pakai indentasi yang sama dengan WAKATIME_API_KEY
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          # Your WakaTime API Key
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          # Optional: Change the theme or other options
-          # theme: "dark"
-          # commit_message: "Updated waka-readme-stats"
-          # ... lihat dokumentasi action untuk opsi lain
-
