Disable SHOW_TITLE in waka-readme.yml
Comment out SHOW_TITLE in WakaTime README workflow

--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -20,7 +20,7 @@ jobs:
           API_BASE_URL: https://wakatime.com/api
           REPOSITORY: RivanFadlani/RivanFadlani
           ### content
-          SHOW_TITLE: true
+          # SHOW_TITLE: true
           SECTION_NAME: waka
           BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
           TIME_RANGE: all_time
